--- a/client/src/components/Message/Message.css
+++ b/client/src/components/Message/Message.css
@@ -59,8 +59,8 @@
     color: #353535;
   }
   
-  .backgroundBlue {
-    background: #2979FF;
+  .backgroundDarkBlue {
+    background: #044692de;
   }
   
   .backgroundLight {
